Done - hadoop and hbase starting and working